--- a/home.html
+++ b/home.html
@@ -6,13 +6,33 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script type="module" src="./index.js"></script>
+    
+    <div class="container">
+        <nav>
+            <ul>
+                <li><a href=""home.html>Log In</a></li>
+            </ul>
+        </nav>
+    </div>
+
 </head>
 
 <body>
-    <div id="map"></div>
-    <script
+    <div id="map">
+        <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBPerAVk4dsvhGH1Rffkk62IbjsNEtlVk&callback=initMap&v=weekly"
         defer></script>
+    </div>
+
+    <section class="main_body">
+        <div>
+            <h2>Titlos</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h4></h4>
+        </div>
+    </section>
+    
 </body>
 
 </html>
