--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <head>
     <title>Dakopagides</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script><!-- xwris auto dn emfanizetai to chart-->
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script type="module" src="./index.js"></script>
