diavazei to csv

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             <h2>Titlos</h2>
             <canvas id="myChart"></canvas>
             <script src="./charts.js"></script>
-            
+            <button onclick="getData()">Push</button>
         </div>
     </section>
     
