--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script><!-- xwris auto dn emfanizetai to chart-->
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script type="module" src="./index.js"></script>
+
+    <script src="https://code.highcharts.com/highcharts.js"></script><!--highCharts-->
     
     <div class="container">
         <nav>
@@ -26,10 +28,13 @@
     </div>
 
     <section class="main_body">
-        <div>
-            <h2>Titlos</h2>
+        <div id="chart-container">
+            <button id="data-btn">Δεδομένα</button>
+            <button id="photo-btn">Φωτογραφίες</button>
             <canvas id="myChart"></canvas>
             <script src="./charts.js"></script>
+            <div id="container-chart"></div>
+            <script src="./highcharts.js"></script>
             <button onclick="getData()">Push</button>
         </div>
     </section>
