--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <script type="module" src="./index.js"></script>
 
     <script src="https://code.highcharts.com/highcharts.js"></script><!--highCharts-->
+    <script src="https://code.highcharts.com/stock/highstock.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     
