--- a/home.html
+++ b/home.html
@@ -10,9 +10,13 @@
     <script type="module" src="./index.js"></script>
 
     <script src="https://code.highcharts.com/highcharts.js"></script><!--highCharts-->
-    <script src="https://code.highcharts.com/stock/highstock.js"></script>
-    <script src="https://code.highcharts.com/modules/data.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/data.js"></script><!--highCharts-->
+    <script src="https://code.highcharts.com/indicators/indicators-all.js"></script>
+    <script src="https://code.highcharts.com/modules/stock-tools.js"></script>
+
+
+
+
     
     <div class="container">
         <nav>
@@ -36,8 +40,10 @@
             <button id="photo-btn">Φωτογραφίες</button>
             <canvas id="myChart"></canvas>
             <script src="./charts.js"></script>
-            <div id="container-chart"></div>
-            <script src="./highcharts.js"></script>
+            <div id="container-chart">
+                <script src="./highcharts.js"></script>
+            </div>
+            
             <button onclick="getData()">Push</button>
         </div>
     </section>
