--- a/home.html
+++ b/home.html
@@ -13,7 +13,10 @@
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
+
     
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
     <div class="container">
         <nav>
             <ul>
