--- a/home.html
+++ b/home.html
@@ -12,6 +12,8 @@
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
     <div class="container">
+        <h2 id="header">Olive Observer</h2>
+        <hr>
         <nav>
             <ul>
                 <li><a href="" home.html>Log In</a></li>
@@ -40,6 +42,7 @@
             <button id="humid-btn">Humidity </button>
         </div>
         <div id="chart-container">
+            <img id="tree" src="./img/single-olive-tree.jpg">
             <canvas id="myChart">
                 <script src="./charts.js"></script>
             </canvas>
