add folders, edit paths

--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script><!-- xwris auto dn emfanizetai to chart-->
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style/style.css" />
+    <script type="module" src="./scripts/index.js"></script>
 
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
@@ -44,7 +44,7 @@
         <div id="chart-container">
             <img id="tree" src="./img/single-olive-tree.jpg">
             <canvas id="myChart">
-                <script src="./charts.js"></script>
+                <script src="./scripts/charts.js"></script>
             </canvas>
         </div>
     </div>
