--- a/home.html
+++ b/home.html
@@ -8,8 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script><!-- xwris auto dn emfanizetai to chart-->
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
     <script type="module" src="./scripts/index.js"></script>
+    
 
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="./scripts/tabs.js"></script>
 
     <div class="container">
         <h2 id="header">Olive Observer</h2>
@@ -30,13 +32,13 @@
     </div>
 
     <div id="main-labels">
-        <div id="nav-btn">
-            <button id="data-btn">Δεδομένα</button>
-            <button id="photo-btn">Φωτογραφίες</button>
+        <div class="tab" id="nav-btn">
+            <button class="tablinks" id="data-btn" onclick="openTab(event, 'chart-main')">Δεδομένα</button>
+            <button class="tablinks" id="photo-btn" onclick="openTab(event, 'photos-main')">Φωτογραφίες</button>
         </div>
     </div>
     
-    <div id="chart-main">
+    <div id="chart-main" class="tabcontent">
         <div id="chart-legend">
             <button id="temp-btn">Temperature </button>
             <button id="humid-btn">Humidity </button>
@@ -47,6 +49,10 @@
                 <script src="./scripts/charts.js"></script>
             </canvas>
         </div>
+    </div>
+
+    <div id="photos-main" class="tabcontent">
+        <h1>Photos Location</h1>
     </div>
 </body>
 </html>
