--- a/home.html
+++ b/home.html
@@ -52,7 +52,10 @@
     </div>
 
     <div id="photos-main" class="tabcontent">
-        <h1>Photos Location</h1>
+        <div>
+            <img class="image-dt" src="./data/INTCAM-DT02-2022-10-25_16:45.jpg">
+        </div>
+        
     </div>
 </body>
 </html>
