fix tree image position

--- a/home.html
+++ b/home.html
@@ -40,8 +40,8 @@
     
     <div id="chart-main" class="tabcontent">
         <div id="chart-legend">
-            <button id="temp-btn">Temperature </button>
-            <button id="humid-btn">Humidity </button>
+            <button class="btn" id="temp-btn">Temperature </button>
+            <button class="btn" id="humid-btn">Humidity </button>
         </div>
         <div id="chart-container">
             <img id="tree" src="./img/single-olive-tree.jpg">
