--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 <body>
     <div id="map">
         <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBPerAVk4dsvhGH1Rffkk62IbjsNEtlVk&callback=initMap&v=weekly"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBPerAVk4dsvhGH1Rffkk62IbjsNEtlVk&libraries=visualization&callback=initMap&v=weekly"
             defer></script>
     </div>
 
